5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4029/executions/1602_2894.log
== TEST (2019-03-27 16:45:02) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 123

# Impressao do valor total:
print(var)
-- OUTPUT:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:45:05) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 123

# Impressao do valor total:
print(var)
-- EXECUTION TIME:
0.129369
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
1.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
356.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
123987.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:46:02) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 123 * 8 + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
1029
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:46:11) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 123 * 8 + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.263926
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
1029
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
1029
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
1029
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:49:45) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("100"))

# Calculo do valor a ser pago, incluindo o frete:
total = 100 * 8 + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:53:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
varlor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = valor * 8 = 45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = valor * 8 = 45
           ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:54:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
varlor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = valor * 8 + 45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = valor * 8 + 45
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:54:13) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
varlor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = valor * 8 + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.219288
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 8, in <module>
    total = valor * 8 + 45
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:54:27) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
varlor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = valor*8+45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = valor*8+45
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:54:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
varlor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = valor*8+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.153103
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 8, in <module>
    total = valor*8+45
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:54:48) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
varlor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total=valor*8+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.207658
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 8, in <module>
    total=valor*8+45
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:54:48) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
varlor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total=valor*8+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.158673
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 8, in <module>
    total=valor*8+45
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:54:51) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
varlor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total=valor*8+45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total=valor*8+45
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:54:54) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
varlor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total=valor*8+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.18573
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 8, in <module>
    total=valor*8+45
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:55:01) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
varlor = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total= valor*8+45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total= valor*8+45
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:55:16) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
varlor= float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total= valor*8+45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total= valor*8+45
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:55:19) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
varlor= float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total= valor*8+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.134387
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 8, in <module>
    total= valor*8+45
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:55:28) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
varlor= float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total= valor*8+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.212267
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 8, in <module>
    total= valor*8+45
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:55:38) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
varlor = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor*8+45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = valor*8+45
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:55:41) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
varlor = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor*8+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.145835
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 8, in <module>
    total = valor*8+45
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:56:10) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
varlor= float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total= valor*8+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.123983
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 8, in <module>
    total= valor*8+45
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:56:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
varlor= float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total= valor*8+45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total= valor*8+45
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:56:20) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
varlor= float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total= valor*8+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.134407
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 8, in <module>
    total= valor*8+45
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:56:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor= float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total= valor*8+45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:56:34) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor= float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total= valor*8+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.1391
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
